force-app/main/default/objects/Opportunity_Monthly_Activity__c/Opportunity_Monthly_Activity__c.object-meta.xml
<CustomObject>
    <label>Opportunity Monthly Activity</label>
    <nameField>
        <displayFormat>OMA-{00000}</displayFormat>
        <label>OMA - Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Monthly Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>