force-app/main/default/objects/Opportunity_Monthly_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
                <color>#33CCFF</color>
                <label>Booked</label>
            </value>
            <value>
                <fullName>Reserved</fullName>
                <color>#6666CC</color>
                <label>Reserved</label>
            </value>
            <value>
                <fullName>Sold</fullName>
                <color>#78C953</color>
                <label>Sold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>