force-app/main/default/objects/Opportunity_Monthly_Activity__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Opportunity Monthly Activities</relationshipLabel>
    <relationshipName>Opportunity_Monthly_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>