force-app/main/default/objects/Opportunity_Monthly_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Unit__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>Activity_Date__c</columns>
    <columns>Activity_Month__c</columns>
    <columns>Relationship_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Activity_Month__c</field>
        <operation>equals</operation>
        <value>Apr-2026</value>
    </filters>
    <filters>
        <field>Activity_Type__c</field>
        <operation>equals</operation>
        <value>Booked,Sold</value>
    </filters>
    <label>All</label>
</ListView>